force-app/main/default/objects/JBCXM__SuccessPlanTemplate__c/JBCXM__SuccessPlanTemplate__c.object-meta.xml
<CustomObject>
    <label>Success Plan Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>