force-app/main/default/objects/JBCXM__SuccessPlanTemplate__c/fields/JBCXM__Objective__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Objective__c</fullName>
    <label>Objective</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>