force-app/main/default/objects/JBCXM__SuccessPlanTemplate__c/fields/JBCXM__Parent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>JBCXM__SuccessPlanTemplate__c</referenceTo>
    <relationshipLabel>ParentTemplate</relationshipLabel>
    <relationshipName>ParentTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>