force-app/main/default/objects/JBCXM__SuccessPlanTemplate__c/fields/JBCXM__Playbook__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Playbook</label>
    <referenceTo>JBCXM__Playbook__c</referenceTo>
    <relationshipLabel>SPTemplatePlaybook</relationshipLabel>
    <relationshipName>SPTemplatePlaybook</relationshipName>
    <type>Lookup</type>
</CustomField>