force-app/main/default/objects/JBCXM__SuccessPlanTemplate__c/fields/JBCXM__Tasks__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Tasks__c</fullName>
    <label>Tasks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>